# gst-plugins-bad-eglgleswaylandsink

./: Makefile.am  README.md  bootstrap.sh  configure.ac
src/: Makefile.am  gsteglgleswaylandsink.c  gsteglgleswaylandsink.h
